<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".list.ListFragment">

    <FrameLayout
        android:id="@+id/list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/income_and_expense" />

        <TextView
            android:id="@+id/date_popup"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:textColor="@color/gray"
            android:layout_gravity="end|center"
            android:gravity="end|center"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:text="@string/whole_list" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/list_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_header"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole_list_income"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/income"
            android:text="@string/whole_list_expense"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expense"
            android:text="@string/list_balance"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recyceler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/list_balance" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/list_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/white"
            app:fabSize="normal"
            android:contentDescription="@string/list_add"
            android:layout_margin="20dp" />
    </FrameLayout>
</RelativeLayout>